6/11/10 big simplifications to model, eliminate Solute class hierarchy
6/11/10 use strengths and concentrations for "Test" solutions as specified by KL
6/11/10 refinement of Solution and Solute model hierarchies
6/9/10 adapt magnifying glass from prototype
6/9/10 wire up controls to set "test" solutions
6/9/10 fix i18n of pH meter display
6/9/10 remove some bogus dependencies on advanced-acid-base-solutions
6/5/10 pH meter, adapted from advanced-acid-base-solutions
6/5/10 models for "test" and "custom" solutes
6/4/10 beaker model and view
6/4/10 javadoc controls
6/4/10 convenience subclass for radio buttons
6/4/10 add tick marks to concentration slider, doc oddities with this
6/3/10 added simple versions of all controls to control panels (no fancy icons)
6/3/10 skeletons for control panels
6/3/10 skeletons for modules and canvases
6/3/10 localize all strings shown in design doc
6/3/10 reorganize package structure
6/3/10 implement model base classes
6/2/10 sim development begins
# 0.00.08 (40783) May 15, 2010
5/15/10 prototype: dev version with smaller beaker and more typical control panel width
5/15/10 prototype: get rid of flashing white rectangle behind magnifying glass that started with 5/13 changes
5/15/10 prototype: move pH meter out of beaker node and on to canvas
5/13/10 prototype: increase Ka max to 1000
5/13/10 prototype: remove drag handlers from magnifying glass and beaker
5/13/10 prototype: update layout as magnifying glass and beaker sizes are changed
5/13/10 prototype: pull up molecule counts to canvas child
5/13/10 prototype: pull up reaction equation to canvas child
5/13/10 prototype: change layout of slider controls so that they take up less horizontal space
5/13/10 prototype: add a dummy second module (tab) to take up vertical space
# 0.00.07 (40474) May 6, 2010
5/6/10 prototype: revert to single-layer representation of H2O
# 0.00.06 (40054) Apr 23, 2010
4/23/10 prototype: improved H2O visualization