@@ -2,6 +2,7 @@
 
 package edu.colorado.phet.acidbasesolutions.module.customsolution;
 
+import edu.colorado.phet.acidbasesolutions.model.ABSModel;
 import edu.colorado.phet.acidbasesolutions.module.ABSCanvas;
 
 /**
@@ -11,7 +12,7 @@ import edu.colorado.phet.acidbasesolutions.module.ABSCanvas;
  */
 public class CustomSolutionCanvas extends ABSCanvas {
 
-    public CustomSolutionCanvas() {
+    public CustomSolutionCanvas( ABSModel model ) {
     }
 
 }
